Changes from PR Review: - reverting location of the scss file(s) ... no good location for them other than where they already are I guess - changing incorrect use of the 'code' HTML tag to CSS-defined monospace - also noticed that the lack of spacing between permissions when listed makes readability quite poor ... fixed ]

--- a/app/static/css/main.css
+++ b/app/static/css/main.css
@@ -6,6 +6,10 @@ pre {
   white-space: pre-wrap;
 }
 
+codelike {
+  font-family: monospace, monospace;
+}
+
 .hidden {
   display:none;
 }
